Use only Path for read and write of weapon and character data