@@ -3,7 +3,8 @@ package com.github.dabasan.jxm.properties.character.xcs;
 import com.github.dabasan.jxm.properties.character.*;
 
 import java.io.IOException;
-import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
 
 import static com.github.dabasan.jxm.bintools.ByteFunctions.getShortFromBinLE;
 import static com.github.dabasan.jxm.bintools.ByteFunctions.getUnsignedShortFromBinLE;
@@ -18,10 +19,10 @@ class XCSReader {
 
     private int pos;
 
-    public XCSReader(InputStream is, int numCharacters) throws IOException {
+    public XCSReader(Path path, int numCharacters) throws IOException {
         characters = new JXMCharacter[numCharacters];
 
-        byte[] bin = is.readAllBytes();
+        byte[] bin = Files.readAllBytes(path);
         pos = 0x0000000C;
 
         for (int i = 0; i < numCharacters; i++) {
